Bug 293268 - In dolphin-(KDE)4.8.0, picture & video previews are too small
Summary: In dolphin-(KDE)4.8.0, picture & video previews are too small
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 2.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-04 08:12 UTC by l33tmmx
Modified: 2012-02-04 21:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description l33tmmx 2012-02-04 08:12:12 UTC
Version:           2.0 (using KDE 4.8.0) 
OS:                Linux

After upgrade to KDE-4.8.0, the picture and video previews in dolphin file manager became way too small to be of any practical value.

The screenshot combo in http://personal.inet.fi/cool/l33tmmx/dolphin4748.png illustrates the problem
- in the left is dolphin-4.7.4; everything okay there
- in the middle 4.8.0; the first jpg and the video suddenly became very small
- in the right 4.8.0 with icons magnified +2 sizes; the video preview is somewhat right, but the first jpg is still smaller than in 4.7.4, all other icons are HUGE

It seems to me that there's now a width restriction to the previews, which does not make any, repeat any, sense, especially considering that 1) most pictures are wider than their height, 2) the new layout (3 columns instead of 4) gives even more space widthwise. Please, please, PLEASE revert back to the 4.7.4 style previews! Dolphin has been the best file manager on any platform by wide margin, but these changes in 4.8.0 were a big step backwards.

As for the new layout - 3 columns with long filenames fully shown, versus the 4.7.4 style 4 columns with abbreviated filenames - well, both styles have their pros and cons, I'd very much like to see both styles as user-chooseable options. Personally, I prefer the 4.7.4 style...

Reproducible: Always
Comment 1 Peter Penz 2012-02-04 21:22:00 UTC
Git commit 0ade2b6ec9363cd9f987d4871bd36af076889d91 by Peter Penz.
Committed on 04/02/2012 at 22:14.
Pushed by ppenz into branch 'KDE/4.8'.

Icons view: Layout optimizations

- Assure that landscape-previews use the whole available width of the icon-area
  instead of only using the square width. This waste of space occured if the
  text-width was larger than the icon-width.

- Only use one margin instead of two between the icons and the text to improve the
  visual appearance (thanks to Martin Zilz for the hint)
FIXED-IN: 4.8.1
CCMAIL: martin@kreativkonzentrat.de

M  +16   -7    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +7    -0    dolphin/src/kitemviews/kfileitemlistview.h
M  +42   -70   dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +0    -1    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +8    -4    dolphin/src/kitemviews/kitemlistview.cpp
M  +2    -12   dolphin/src/kitemviews/kitemlistwidget.cpp
M  +1    -1    dolphin/src/views/dolphinitemlistcontainer.cpp

http://commits.kde.org/kde-baseapps/0ade2b6ec9363cd9f987d4871bd36af076889d91
Comment 2 Peter Penz 2012-02-04 21:23:06 UTC
Git commit 3df6bffbb0ce5c30d72e00e5bd5c720636d77315 by Peter Penz.
Committed on 04/02/2012 at 22:14.
Pushed by ppenz into branch 'master'.

Icons view: Layout optimizations

- Assure that landscape-previews use the whole available width of the icon-area
  instead of only using the square width. This waste of space occured if the
  text-width was larger than the icon-width.

- Only use one margin instead of two between the icons and the text to improve the
  visual appearance (thanks to Martin Zilz for the hint)
FIXED-IN: 4.8.1
CCMAIL: martin@kreativkonzentrat.de

M  +16   -7    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +7    -0    dolphin/src/kitemviews/kfileitemlistview.h
M  +42   -70   dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +0    -1    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +8    -4    dolphin/src/kitemviews/kitemlistview.cpp
M  +2    -12   dolphin/src/kitemviews/kitemlistwidget.cpp
M  +1    -1    dolphin/src/views/dolphinitemlistcontainer.cpp

http://commits.kde.org/kde-baseapps/3df6bffbb0ce5c30d72e00e5bd5c720636d77315
Comment 3 Peter Penz 2012-02-04 21:24:55 UTC
@l33tmmx: I fully agree that this waste of space does not make any sense and this was clearly a bug.